--- a/Site/Dedal/package.json
+++ b/Site/Dedal/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "scripts": {
+    "start": "gulp",
+    "serve": "http-server",
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -17,5 +19,22 @@
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-coffee": "^2.3.4",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-size": "^2.1.0",
+    "gulp-sass": "latest",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "latest",
+    "gulp-util": "^3.0.8",
+    "laravel-elixir": "^6.0.0-15",
+    "sass-mediaqueries": "^1.6.1",
+    "susy": "^2.2.12"
   }
 }
