--- a/Site/Dedal/composer.json
+++ b/Site/Dedal/composer.json
@@ -10,6 +10,7 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4",
         "nesbot/carbon": "^1.22"
     },
     "require-dev": {
