--- a/App/Dedale/package.json
+++ b/App/Dedale/package.json
@@ -27,6 +27,7 @@
     "ionic-angular": "3.6.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
+    "susy": "^2.2.12",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12",
     "@ionic-native/camera": "3.12.1",
