--- a/App/Dedale/ionic.config.json
+++ b/App/Dedale/ionic.config.json
@@ -2,5 +2,7 @@
   "name": "Dedal",
   "app_id": "",
   "type": "ionic-angular",
-  "integrations": {}
+  "integrations": {
+    "cordova": {}
+  }
 }
