--- a/Site/Dedale_front/package.json
+++ b/Site/Dedale_front/package.json
@@ -13,12 +13,15 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-vue": "0.0.27",
     "semantic-ui-vue2": "^2.4.2",
     "vue": "^2.4.2",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "webpack": "^3.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
