--- a/Site/Dedale_front/package.json
+++ b/Site/Dedale_front/package.json
@@ -13,6 +13,7 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "semantic-ui-css": "^2.2.12",
