soucis oauth laravel header

--- a/Site/Dedale_New/public/.htaccess
+++ b/Site/Dedale_New/public/.htaccess
@@ -18,4 +18,5 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    Header set Access-Control-Allow-Origin "*"
 </IfModule>
