--- a/Site/Dedale_front/package.json
+++ b/Site/Dedale_front/package.json
@@ -19,6 +19,7 @@
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-vue": "0.0.27",
     "semantic-ui-vue2": "^2.4.2",
+    "sweetalert": "^2.0.8",
     "vue": "^2.4.2",
     "vue-multiselect": "^2.0.3",
     "vue-resource": "^1.3.4",
