--- a/Site/Dedale_front/package.json
+++ b/Site/Dedale_front/package.json
@@ -24,6 +24,7 @@
     "vue-multiselect": "^2.0.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
+    "vuex": "^3.0.0",
     "webpack": "^3.7.1"
   },
   "devDependencies": {
