--- a/Site/Dedale_front/package.json
+++ b/Site/Dedale_front/package.json
@@ -20,6 +20,7 @@
     "semantic-ui-vue": "0.0.27",
     "semantic-ui-vue2": "^2.4.2",
     "sweetalert": "^2.0.8",
+    "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.4.2",
     "vue-multiselect": "^2.0.3",
     "vue-resource": "^1.3.4",
