--- a/Site/Dedale_New/composer.json
+++ b/Site/Dedale_New/composer.json
@@ -8,20 +8,26 @@
         "php": ">=7.0.0",
         "barryvdh/laravel-cors": "^0.9.3",
         "fideloper/proxy": "~3.3",
+        "jenssegers/date": "^3.2",
+        "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/passport": "^4.0",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "~5.0",
+        "nesbot/carbon": "^1.22"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laracasts/generators": "^1.1",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "database/migrations"
         ],
         "psr-4": {
             "App\\": "app/"
