--- a/Site/Dedale_New/composer.json
+++ b/Site/Dedale_New/composer.json
@@ -8,13 +8,16 @@
         "php": ">=7.0.0",
         "barryvdh/laravel-cors": "^0.9.3",
         "fideloper/proxy": "~3.3",
+        "gstt/laravel-achievements": "^1.0",
         "jenssegers/date": "^3.2",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/passport": "^4.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "~5.0",
-        "nesbot/carbon": "^1.22"
+        "nesbot/carbon": "^1.22",
+        "overtrue/laravel-follow": "^1.1",
+        "trexology/reviewrateable": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
