--- a/Site/Dedale_New/composer.json
+++ b/Site/Dedale_New/composer.json
@@ -22,7 +22,7 @@
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
-        "laracasts/generators": "^1.1",
+        "laracasts/generators": "dev-master",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~6.0"
     },
