--- a/Site/Dedale_New/.env.production
+++ b/Site/Dedale_New/.env.production
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://bloshicorp.be/projets/playpal
 
 DB_CONNECTION=mysql
-DB_HOST=bloshicopuplaypa.mysql.db
+DB_HOST=localhost
 DB_PORT=
-DB_DATABASE=bloshicopuplaypa
-DB_USERNAME=bloshicopuplaypa
-DB_PASSWORD=MDN9KwFW3KnVFP7VTQYG
+DB_DATABASE=maxb
+DB_USERNAME=maxb
+DB_PASSWORD=b92tnwOR
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
